feat: add validation to contact form

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -5,5 +5,40 @@
       "type": "cicd",
       "lastPushTimeStamp": "2021-07-09T18:54:52.345Z"
     }
+  },
+  "api": {
+    "sarahbonzelet": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7,
+              "description": "sarahbonzelet.de API Key"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
+  },
+  "function": {
+    "contactRequestHandler": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "sarahbonzelet",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        }
+      ]
+    }
   }
 }
