--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
+
+themes/2020/static/js/main.bundle.js
+themes/2020/static/js/main.bundle.js.LICENSE.txt
