--- a/package.json
+++ b/package.json
@@ -12,23 +12,29 @@
   "homepage": "https://github.com/cremich/sarahbonzelet.de#readme",
   "dependencies": {
     "autoprefixer": "^10.2.6",
+    "aws-amplify": "^4.1.3",
     "bulma": "^0.9.3",
-    "postcss-cli": "^7.1.2"
+    "postcss-cli": "^7.1.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "copy-webpack-plugin": "^9.0.1",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.2",
-    "prettier-plugin-go-template": "0.0.11"
+    "prettier-plugin-go-template": "0.0.11",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
   },
   "scripts": {
-    "build": "hugo",
-    "start": "hugo serve",
+    "build": "webpack --mode=production && hugo",
+    "start": "webpack --mode=development --watch",
     "prepare": "husky install"
   }
 }
