--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://main.dm0j1scmjjhbx.amplifyapp.com/"
+baseURL = "https://main.d3tic5v4wgmjtf.amplifyapp.com/"
 languageCode = "de-de"
 DefaultContentLanguage = "de"
 title = "Sarah Bonzelet - Hair & Make-Up"
