--- a/amplify.yml
+++ b/amplify.yml
@@ -11,7 +11,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - hugo
+        - npm run-script build
   artifacts:
     baseDirectory: public
     files:
