feat(backend): add api gateway with custom domain name support

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build --stream",
     "build:production": "lerna run build:production --stream",
-    "deploy": "lerna run deploy --stream",
+    "deploy:dev": "lerna run deploy:dev --stream",
+    "deploy:prod": "lerna run deploy:prod --stream",
     "diff": "lerna run diff --stream",
     "format": "lerna run format --stream --parallel",
     "lint": "lerna run lint --stream --parallel",
