--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "de-de"
 DefaultContentLanguage = "de"
 title = "Sarah Bonzelet - Hair & Make-Up"
 theme = "2020"
+timeout = "90s"
 
 [params]
   author = "Sarah Bonzelet"
