--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,11 +22,14 @@
     "prepush": "jest"
   },
   "devDependencies": {
+    "@aws-sdk/client-sesv2": "3.47.2",
     "@types/aws-lambda": "8.10.90",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.10",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
+    "aws-sdk-client-mock": "0.6.0",
+    "aws-xray-sdk": "3.3.4",
     "esbuild": "0.14.12",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
@@ -41,8 +44,10 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "2.8.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "2.8.0-alpha.0",
     "aws-cdk-lib": "2.8.0",
     "constructs": "^10.0.0",
+    "dotenv": "14.2.0",
     "source-map-support": "^0.5.16"
   },
   "lint-staged": {
