feat: set site_domain in cms config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,6 +5,7 @@ backend:
   name: github
   branch: main
   repo: cremich/sarahbonzelet.de
+  site_domain: cms.netlify.com
 media_folder: "static/images"
 collections:
   - name: "pages"
