--- a/packages/website/amplify.yml
+++ b/packages/website/amplify.yml
@@ -1,21 +1,23 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - nvm use $VERSION_NODE_12
-        - wget https://github.com/gohugoio/hugo/releases/download/v0.92.2/hugo_extended_0.92.2_Linux-64bit.tar.gz
-        - tar -xf hugo_extended_0.92.2_Linux-64bit.tar.gz hugo
-        - mv hugo /usr/bin/hugo
-        - rm -rf hugo_extended_0.92.2_Linux-64bit.tar.gz
-        - npm ci
-    build:
-      commands:
-        - npm run-script build
-  artifacts:
-    baseDirectory: public
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
+applications:
+  - appRoot: packages/website
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - nvm use $VERSION_NODE_12
+            - wget https://github.com/gohugoio/hugo/releases/download/v0.92.2/hugo_extended_0.92.2_Linux-64bit.tar.gz
+            - tar -xf hugo_extended_0.92.2_Linux-64bit.tar.gz hugo
+            - mv hugo /usr/bin/hugo
+            - rm -rf hugo_extended_0.92.2_Linux-64bit.tar.gz
+            - npm ci
+        build:
+          commands:
+            - npm run-script build
+      artifacts:
+        baseDirectory: public
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - node_modules/**/*
