feat(website): enable website for environment specific builds for dev and prod

--- a/packages/website/amplify.yml
+++ b/packages/website/amplify.yml
@@ -13,7 +13,7 @@ applications:
             - npm ci
         build:
           commands:
-            - npm run-script build
+            - npm run-script build:$BUILD_ENV
       artifacts:
         baseDirectory: public
         files:
