--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build:production": "webpack --mode=production && hugo",
-    "build": "webpack --mode=development --watch && hugo",
+    "build:dev": "webpack --mode=development && hugo --config config-dev.toml",
     "watch": "webpack --mode=development --watch",
     "start": "hugo serve",
     "precommit": "webpack --mode=production && lint-staged"
