--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -45,9 +45,9 @@
   "dependencies": {
     "aws-cdk-lib": "2.13.0",
     "@aws-cdk/aws-amplify-alpha": "2.8.0-alpha.0",
-    "constructs": "^10.0.0",
+    "constructs": "10.0.0",
     "dotenv": "16.0.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "0.5.16"
   },
   "lint-staged": {
     "*.{js,ts}": [
