--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,6 +28,8 @@
     "@types/node": "17.0.21",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.12.1",
+    "aws-cdk": "2.8.0",
+    "aws-cdk-github-oidc": "^2.2.0",
     "aws-sdk-client-mock": "0.6.0",
     "aws-xray-sdk": "3.3.4",
     "esbuild": "0.14.23",
@@ -35,16 +37,15 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "26.1.1",
     "jest": "27.4.7",
-    "ts-jest": "27.1.3",
-    "aws-cdk": "2.8.0",
-    "ts-node": "10.5.0",
-    "typescript": "4.5.5",
     "lint-staged": "12.2.2",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "ts-jest": "27.1.3",
+    "ts-node": "10.5.0",
+    "typescript": "4.5.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.13.0",
     "@aws-cdk/aws-amplify-alpha": "2.13.0-alpha.0",
+    "aws-cdk-lib": "2.13.0",
     "constructs": "10.0.70",
     "dotenv": "16.0.0",
     "source-map-support": "0.5.21"
