--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,18 +38,30 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2.1.0          
     
-  deploy:
+  deployment-dev:
     runs-on: ubuntu-latest
+    environment: development
     needs: build
     permissions:
       id-token: write
       contents: read
+    env:
+      CONTACT_FORM_RECIPIENT_EMAIL: ${{ secrets.CONTACT_FORM_RECIPIENT_EMAIL}}
     steps:
-      - name: Checkout
+      - name: Checkout source code
         uses: actions/checkout@v2
-
+        with:
+          fetch-depth: 0
+      - name: Setup Node.js 16.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: "16.x"  
+      - name: Install dependencies
+        run: npm run-script setup:ci
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}  
+      - name: Deploy application
+        run: npm run-script deploy:prod       
