--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,3 +65,4 @@ jobs:
         run: npm run-script deploy:dev       
         env:
           CONTACT_FORM_RECIPIENT_EMAIL: ${{ secrets.CONTACT_FORM_RECIPIENT_EMAIL}}
+          AMPLIFY_ENABLE: true
