chore(website): add .DS_Store to .gitignore

--- a/packages/website/.gitignore
+++ b/packages/website/.gitignore
@@ -28,3 +28,4 @@ themes/2020/static/js/main.bundle.js.LICENSE.txt
 themes/2020/static/js/main.*.hot-update.js
 themes/2020/static/js/main.*.hot-update.json
 *.lock
+.DS_Store
