build: use build step instead of build:dev for development builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: npm run-script setup:ci
       - name: Build sources in dev profile
-        run: npm run-script build:dev        
+        run: npm run-script build        
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
