--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "16.x"  
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.92.2'
+          extended: true                
       - name: Install dependencies
         run: npm run-script setup:ci
       - name: Build sources in dev profile
