--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,27 +3,27 @@ name: Release
 on:
   push:
     branches: [main]
+
+env:
+  NODE_VERSION: 16.x
+  HUGO_VERSION: '0.92.2'
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.NODE_VERSION }}
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.92.2'
+          hugo-version: ${{ env.HUGO_VERSION }}
           extended: true          
       - name: Install dependencies
         run: npm run-script setup:ci
@@ -50,14 +50,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Setup Node.js 16.x
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
         with:
-          node-version: "16.x"  
+          node-version: ${{ env.NODE_VERSION }}
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.92.2'
+          hugo-version: ${{ env.HUGO_VERSION }}
           extended: true                
       - name: Install dependencies
         run: npm run-script setup:ci
