ci: setup git user before releasing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,6 +85,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Setup git user
+        uses: fregante/setup-git-user@v1        
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
