ci: add tag based workflow to deploy to prod

--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,7 @@
       "exact": true,
       "message": "chore: release %v [skip ci]",
       "noCommitHooks": true,
-      "tagVersionPrefix": ""
+      "tagVersionPrefix": "v"
     }
   },
   "version": "0.1.0"
