--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,86 +9,184 @@ env:
   HUGO_VERSION: '0.92.2'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: ${{ env.HUGO_VERSION }}
-          extended: true          
-      - name: Install dependencies
-        run: npm run-script setup:ci
-      - name: Build sources
-        run: npm run-script build:production
-      - name: Lint sources
-        run: npm run-script lint:ci
-      - name: Run tests
-        run: npm run-script test:ci
-        env:
-          CI: true
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2.1.0          
-    
+  test:
+    name: Test and lint
+    uses: ./.github/workflows/development.yml
+
+  build-website-dev:
+      name: Build website (dev)
+      runs-on: ubuntu-latest
+      steps:
+        - name: "☁️ checkout repository"
+          uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
+
+        - name: "🔧 setup node"
+          uses: actions/setup-node@v1
+          with:
+            node-version: ${{ env.NODE_VERSION }}
+
+        - name: "🔧 setup Hugo"
+          uses: peaceiris/actions-hugo@v2
+          with:
+            hugo-version: ${{ env.HUGO_VERSION }}
+            extended: true    
+
+        - name: "📦 install dependencies"
+          run: npm run-script setup:ci
+
+        - name: "🏗 Build sources"
+          run: npm run-script build    
+
+        - name: "📂 website dev artifacts"
+          uses: actions/upload-artifact@v2
+          with:
+            name: website-build-dev
+            path: packages/website/public        
+
+  build-website-prod:
+      name: Build website (production)
+      runs-on: ubuntu-latest
+      steps:
+        - name: "☁️ checkout repository"
+          uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
+
+        - name: "🔧 setup node"
+          uses: actions/setup-node@v1
+          with:
+            node-version: ${{ env.NODE_VERSION }}
+
+        - name: "🔧 setup Hugo"
+          uses: peaceiris/actions-hugo@v2
+          with:
+            hugo-version: ${{ env.HUGO_VERSION }}
+            extended: true    
+
+        - name: "📦 install dependencies"
+          run: npm run-script setup:ci
+
+        - name: "🏗 Build sources"
+          run: npm run-script build:production    
+
+        - name: "📂 website prod artifacts"
+          uses: actions/upload-artifact@v2
+          with:
+            name: website-build-prod
+            path: packages/website/public               
+
   deployment-dev:
+    name: Release to dev environment
     runs-on: ubuntu-latest
     environment: development
-    needs: build
+    needs:
+      - test
+      - build-website-dev
     permissions:
       id-token: write
       contents: read
     steps:
-      - name: Checkout source code
+      - name: "☁️ checkout repository"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Setup Node.js
+
+      - name: "🔧 setup node"
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ env.NODE_VESION }}
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: ${{ env.HUGO_VERSION }}
-          extended: true                
-      - name: Install dependencies
+          node-version: ${{ env.NODE_VERSION }}  
+
+      - name: "📦 install dependencies"
         run: npm run-script setup:ci
-      - name: Build sources in dev profile
-        run: npm run-script build        
-      - name: Configure AWS credentials
+
+      - name: "♻️ clean up artifact paths"
+        run: |
+          rm -rf packages/website/public/
+
+      - name: "📂 download website dev artifacts"
+        uses: actions/download-artifact@v2
+        with:
+          name: website-build-dev
+          path: packages/website/public/
+
+      - name: "🔐 Configure AWS credentials"
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}  
-      - name: Deploy application
+          aws-region: ${{ secrets.AWS_REGION }} 
+
+      - name: "🚀 Deploy application"
         run: npm run-script deploy:dev       
         env:
           CONTACT_FORM_RECIPIENT_EMAIL: ${{ secrets.CONTACT_FORM_RECIPIENT_EMAIL}}
-          HOSTING_ENABLED: true
+          HOSTING_ENABLED: true            
 
   release:
+    name: Create semantic release
     runs-on: ubuntu-latest
-    needs: [build,deployment-dev]
+    needs: [deployment-dev, build-website-prod]
     steps:
-      - name: Checkout source code
+      - name: "☁️ checkout repository"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Setup git user
+
+      - name: "👤 Setup git user"
         uses: fregante/setup-git-user@v1        
-      - name: Setup Node.js
+
+      - name: "🔧 setup node"
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ env.NODE_VESION }}                
-      - name: Install dependencies
+          node-version: ${{ env.NODE_VERSION }}                
+
+      - name: "📦 install dependencies"
         run: npm run-script setup:ci
-      - name: Release version    
+
+      - name: "🏷 Release version"
         run: npm run-script release
+
+  deployment-prod:
+    name: Release to production environment
+    runs-on: ubuntu-latest
+    environment: production
+    needs:
+      - release
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - name: "☁️ checkout repository"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: "🔧 setup node"
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.NODE_VERSION }}  
+
+      - name: "📦 install dependencies"
+        run: npm run-script setup:ci
+
+      - name: "♻️ clean up artifact paths"
+        run: |
+          rm -rf packages/website/public/
+
+      - name: "📂 download website prod artifacts"
+        uses: actions/download-artifact@v2
+        with:
+          name: website-build-prod
+          path: packages/website/public/
+
+      - name: "🔐 Configure AWS credentials"
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }} 
+
+      - name: "🚀 Deploy application"
+        run: npm run-script deploy:prod       
+        env:
+          CONTACT_FORM_RECIPIENT_EMAIL: ${{ secrets.CONTACT_FORM_RECIPIENT_EMAIL}}      
