--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -29,7 +29,7 @@
     "@typescript-eslint/eslint-plugin": "5.13.0",
     "@typescript-eslint/parser": "5.13.0",
     "aws-cdk": "2.15.0",
-    "aws-cdk-github-oidc": "^2.2.0",
+    "aws-cdk-github-oidc": "2.2.0",
     "aws-sdk-client-mock": "0.6.2",
     "aws-xray-sdk": "3.3.4",
     "esbuild": "0.14.25",
