--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,12 +6,13 @@
   },
   "scripts": {
     "build": "tsc",
-    "build:production": "npm run build",
+    "build:prod": "npm run build",
+    "build:uat": "npm run build",
     "watch": "tsc -w",
     "test": "jest",
     "test:ci": "jest --coverage",
     "cdk": "cdk",
-    "deploy:dev": "cdk deploy sarah-bonzelet-de-dev --require-approval never --outputs-file outputs.json",
+    "deploy:uat": "cdk deploy sarah-bonzelet-de-uat --require-approval never --outputs-file outputs.json",
     "deploy:prod": "cdk deploy sarah-bonzelet-de-prod --require-approval never --outputs-file outputs.json",
     "diff": "cdk diff",
     "format": "prettier --config .prettierrc.json '**/*.{js,ts,md}' --write",
