--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@
 name: Release
 on:
   push:
-    branches: [main]
+    branches: [main, uat]
 
 env:
   NODE_VERSION: 16.x
@@ -13,8 +13,8 @@ jobs:
     name: Test and lint
     uses: ./.github/workflows/development.yml
 
-  build-website-dev:
-      name: Build website (dev)
+  build-website-uat:
+      name: Build website (uat)
       runs-on: ubuntu-latest
       steps:
         - name: "☁️ checkout repository"
@@ -37,12 +37,12 @@ jobs:
           run: npm run-script setup:ci
 
         - name: "🏗 Build sources"
-          run: npm run-script build    
+          run: npm run-script build:uat    
 
-        - name: "📂 website dev artifacts"
+        - name: "📂 website uat artifacts"
           uses: actions/upload-artifact@v2
           with:
-            name: website-build-dev
+            name: website-build-uat
             path: packages/website/public        
 
   build-website-prod:
@@ -69,7 +69,7 @@ jobs:
           run: npm run-script setup:ci
 
         - name: "🏗 Build sources"
-          run: npm run-script build:production    
+          run: npm run-script build:prod    
 
         - name: "📂 website prod artifacts"
           uses: actions/upload-artifact@v2
@@ -77,13 +77,13 @@ jobs:
             name: website-build-prod
             path: packages/website/public               
 
-  deployment-dev:
-    name: Release to dev environment
+  deployment-uat:
+    name: Release to uat environment
     runs-on: ubuntu-latest
-    environment: development
+    environment: uat
     needs:
       - test
-      - build-website-dev
+      - build-website-uat
     permissions:
       id-token: write
       contents: read
@@ -105,10 +105,10 @@ jobs:
         run: |
           rm -rf packages/website/public/
 
-      - name: "📂 download website dev artifacts"
+      - name: "📂 download website uat artifacts"
         uses: actions/download-artifact@v2
         with:
-          name: website-build-dev
+          name: website-build-uat
           path: packages/website/public/
 
       - name: "🔐 Configure AWS credentials"
@@ -118,7 +118,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }} 
 
       - name: "🚀 Deploy application"
-        run: npm run-script deploy:dev       
+        run: npm run-script deploy:uat       
         env:
           CONTACT_FORM_RECIPIENT_EMAIL: ${{ secrets.CONTACT_FORM_RECIPIENT_EMAIL}}
           HOSTING_ENABLED: true            
@@ -126,7 +126,7 @@ jobs:
   release:
     name: Create semantic release
     runs-on: ubuntu-latest
-    needs: [deployment-dev, build-website-prod]
+    needs: [deployment-uat, build-website-prod]
     steps:
       - name: "☁️ checkout repository"
         uses: actions/checkout@v2
