--- a/packages/website/config-uat.toml
+++ b/packages/website/config-uat.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dev.sarahbonzelet.de/"
+baseURL = "https://uat.sarahbonzelet.de/"
 languageCode = "de-de"
 DefaultContentLanguage = "de"
 title = "Sarah Bonzelet - Hair & Make-Up"
