--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "lerna run build --stream",
     "build:uat": "lerna run build:uat --stream",
     "build:prod": "lerna run build:prod --stream",
+    "deploy:dev": "lerna run deploy:dev --stream",
     "deploy:uat": "lerna run deploy:uat --stream",
     "deploy:prod": "lerna run deploy:prod --stream",
     "diff": "lerna run diff --stream",
