--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -47,6 +47,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "@sarahbonzelet.de/website": "^0.4.0",
     "aws-cdk-lib": "2.33.0",
     "constructs": "10.0.98",
     "dotenv": "16.0.0",
